--- a/010.2022_Shohei_Ohtani/Shohei_Ohtani_analysis.ipynb
+++ b/010.2022_Shohei_Ohtani/Shohei_Ohtani_analysis.ipynb
@@ -11398,7 +11398,7 @@
     "options(max.print=100000)\n",
     "\n",
     "#* Using function to check NULL, but with no result\n",
-    "is.na(Pitching_Ohtani$pitch_type)\n"
+    "print(is.na(Pitching_Ohtani$pitch_type))\n"
    ]
   },
   {
@@ -47692,7 +47692,7 @@
   {
    "cell_type": "code",
    "execution_count": 472,
-   "id": "e08036eb",
+   "id": "d5e6dbbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47702,7 +47702,7 @@
   {
    "cell_type": "code",
    "execution_count": 473,
-   "id": "a8451ebd",
+   "id": "81f9e54f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48987,7 +48987,7 @@
   {
    "cell_type": "code",
    "execution_count": 490,
-   "id": "2ce3f5aa",
+   "id": "fb26b699",
    "metadata": {},
    "outputs": [
     {
@@ -50309,7 +50309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cc201ea",
+   "id": "fdad82bf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -50317,7 +50317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "987156b6",
+   "id": "e9cd02a5",
    "metadata": {},
    "outputs": [],
    "source": []
